--- a/index.html
+++ b/index.html
@@ -159,10 +159,67 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Producto 5: Pulsera Foco Dorado -->
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                        <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
+                        <img src="https://i.postimg.cc/fTTwms4N/Ojo-rojo-tigre.png" alt="Pulsera Foco Dorado" class="w-full h-54 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Foco Dorado</h3>
+                            <p class="mt-2 text-sm text-gray-600">Pulsera elegante y enérgica diseñada para quienes desean actuar con confianza y claridad.</p>
+                            <div class="mt-4">
+                                <p class="text-sm font-semibold"><strong>Piedra:</strong> Granate, Obsidiana, Hematita gris</p>
+                                <p class="text-sm font-semibold"><strong>Energía:</strong> Vitalidad, protección, enfoque</p>
+                                <p class="text-sm font-semibold"><strong>Chakra:</strong> Raíz, corazón, tercer ojo</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto 6: Pulsera Fuego Interior -->
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                        <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
+                        <img src="https://i.postimg.cc/2yXhmwp9/granate.png" alt="Pulsera Fuego Interior" class="w-full h-54 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Fuego Interior</h3>
+                            <p class="mt-2 text-sm text-gray-600">Pulsera intensa que canaliza la energía del fuego interno y la fuerza de la tierra.</p>
+                            <div class="mt-4">
+                                <p class="text-sm font-semibold"><strong>Piedra:</strong> Ojo de tigre, Calcita amarilla, Hematita dorada</p>
+                                <p class="text-sm font-semibold"><strong>Energía:</strong> Fuerza, confianza, claridad mental</p>
+                                <p class="text-sm font-semibold"><strong>Chakra:</strong> Raíz, plexo solar</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto 7: Pulsera 7 Chakras – Armonía Femenina -->
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                        <!-- Pega aquí la URL de la Pulsera 7 Chakras – Armonía Femenina -->
+                        <img src="https://i.postimg.cc/65dd2dNS/7-Chakras-dama-gpt.png" alt="Pulsera 7 Chakras Armonía Femenina" class="w-full h-54 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold font-display text-amber-800">Pulsera 7 Chakras Armonía Femenina</h3>
+                            <p class="mt-2 text-sm text-gray-600">Pulsera artesanal diseñada para alinear los siete centros energéticos del cuerpo.</p>
+                            <div class="mt-4">
+                                <p class="text-sm font-semibold"><strong>Piedra:</strong> Jaspe, citrino, ágata, amatista, ojo de tigre, lapislázuli y aventurina</p>
+                                <p class="text-sm font-semibold"><strong>Energía:</strong> Alineación de chakras, armonía interior, equilibrio espiritual</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Producto 8: Pulsera Espíritu Sereno -->
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                        <!-- Pega aquí la URL del Collar Paz Interior -->
+                        <img src="https://i.postimg.cc/RCYCz86Q/Amatista-hemati.png" alt="Pulsera Espíritu Sereno" class="w-full h-74 object-cover">
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Espíritu Sereno</h3>
+                            <p class="mt-2 text-sm text-gray-600">Pulsera elegante que canaliza la energía de la calma y la protección interior.</p>
+                            <div class="mt-4">
+                                <p class="text-sm font-semibold"><strong>Piedra:</strong> Amatista, Hematita gris</p>
+                                <p class="text-sm font-semibold"><strong>Energía:</strong> Calma mental, protección energética, equilibrio espiritual</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-
         <!-- Materiales Section -->
         <section id="materiales" class="py-16 sm:py-24 bg-pattern">
             <div class="container mx-auto px-6">
