--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="md:col-span-3">
                         <h2 class="text-3xl md:text-4xl font-bold text-amber-900 font-display mb-4">Historia e Inspiración</h2>
                         <div class="space-y-4 text-gray-700 leading-relaxed">
-                            <p>Margarita Llanes Lara nació en 1953 en el pequeño pueblo yucateco de Andrés Quintana Roo, hija de dos pioneros en la educación rural: el profesor Eleuterio Llanes Pasos y Minerva Lara, hablantes de lengua maya. Su infancia transcurrió entre la calidez del hogar y las calles de Chetumal, capital del estado.</p>
+                            <p>Margarita Llanes Lara nació en 1953 en el pequeño pueblo llamado Señor Quintana Roo en ese entonces Territorio Federal, hija de dos pioneros en la educación rural: el profesor Eleuterio Llanes Pasos y Minerva Lara, hablantes de lengua maya. Su infancia transcurrió entre la calidez del hogar y las calles de Chetumal, capital del estado.</p>
                             <p>A lo largo de su vida, Margarita ha transitado desafíos personales con una fuerza vital admirable. Actualmente se encuentra en tratamiento por cáncer de mama, y fue precisamente en este proceso que encontró en la creación de bisutería una forma de sanar, meditar y volver a conectar con su esencia.</p>
                             <p class="font-semibold text-amber-800">Hoy comparte ese bienestar con quienes, como ella, buscan equilibrio, luz y energía a través de lo natural.</p>
                         </div>
@@ -163,7 +163,7 @@
                     <!-- Producto 5: Pulsera Foco Dorado -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
-                        <img src="https://i.postimg.cc/fTTwms4N/Ojo-rojo-tigre.png" alt="Pulsera Foco Dorado" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/2yXhmwp9/granate.png" alt="Pulsera Foco Dorado" class="w-full h-54 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Foco Dorado</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera elegante y enérgica diseñada para quienes desean actuar con confianza y claridad.</p>
@@ -178,7 +178,7 @@
                     <!-- Producto 6: Pulsera Fuego Interior -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
-                        <img src="https://i.postimg.cc/2yXhmwp9/granate.png" alt="Pulsera Fuego Interior" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/fTTwms4N/Ojo-rojo-tigre.png" alt="Pulsera Fuego Interior" class="w-full h-54 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Fuego Interior</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera intensa que canaliza la energía del fuego interno y la fuerza de la tierra.</p>
