--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="md:col-span-3">
                         <h2 class="text-3xl md:text-4xl font-bold text-amber-900 font-display mb-4">Historia e Inspiración</h2>
                         <div class="space-y-4 text-gray-700 leading-relaxed">
-                            <p>Margarita Llanes Lara nació en 1953 en el pequeño pueblo llamado Señor Quintana Roo en ese entonces Territorio Federal, hija de dos pioneros en la educación rural: el profesor Eleuterio Llanes Pasos y Minerva Lara, hablantes de lengua maya. Su infancia transcurrió entre la calidez del hogar y las calles de Chetumal, capital del estado.</p>
+                            <p>Margarita Llanes Lara nació en 1953, en el pequeño pueblo de Señor, Quintana Roo, que en ese entonces era todavía Territorio Federal. Hija de dos pioneros en la educación rural: el profesor Eleuterio Llanes Pasos y Minerva Lara, hablantes de lengua maya. Su infancia transcurrió entre la calidez del hogar y las calles de Chetumal, capital del Estado de Quintana Roo.</p>
                             <p>A lo largo de su vida, Margarita ha transitado desafíos personales con una fuerza vital admirable. Actualmente se encuentra en tratamiento por cáncer de mama, y fue precisamente en este proceso que encontró en la creación de bisutería una forma de sanar, meditar y volver a conectar con su esencia.</p>
                             <p class="font-semibold text-amber-800">Hoy comparte ese bienestar con quienes, como ella, buscan equilibrio, luz y energía a través de lo natural.</p>
                         </div>
@@ -105,7 +105,7 @@
                     <!-- Producto 1: Pulsera Virgen Perla -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Virgen Perla -->
-                        <img src="https://i.postimg.cc/Gp2067gr/file-000000005a246230aea6d4f175c30839.png" alt="Pulsera Virgen Perla Tricolor" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/Gp2067gr/file-000000005a246230aea6d4f175c30839.png" alt="Pulsera Virgen Perla Tricolor" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Virgen Perla Tricolor</h3>
                             <p class="mt-2 text-sm text-gray-600">Elegante pulsera hecha a mano con perlas en tonos blanco, rosa y crema. Incluye dije de Virgen en chapa de oro de 18k.</p>
@@ -119,7 +119,7 @@
                     <!-- Producto 2: Pulsera Azul Profundo -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Azul Profundo -->
-                        <img src="https://i.postimg.cc/brfBY3gZ/Chat-GPT-Image-15-jul-2025-11-51-19-a-m.png" alt="Pulsera Azul Profundo" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/brfBY3gZ/Chat-GPT-Image-15-jul-2025-11-51-19-a-m.png" alt="Pulsera Azul Profundo" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Azul Profundo</h3>
                             <p class="mt-2 text-sm text-gray-600">Combina la sabiduría del lapislázuli, la firmeza de la hematita y la calma del ágata azul.</p>
@@ -134,7 +134,7 @@
                     <!-- Producto 3: Pulsera Tierra Viva -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Tierra Viva -->
-                        <img src="https://i.postimg.cc/zvk0z53Q/file-00000000ab5c61fa8cd988c5f20dd533.png" alt="Pulsera Tierra Viva" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/zvk0z53Q/file-00000000ab5c61fa8cd988c5f20dd533.png" alt="Pulsera Tierra Viva" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Tierra Viva</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera vibrante que conecta con la fuerza vital de la tierra. Favorece la motivación y el arraigo.</p>
@@ -148,7 +148,7 @@
                     <!-- Producto 4: Collar Paz Interior -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL del Collar Paz Interior -->
-                        <img src="https://i.postimg.cc/Y0yLfyP9/Chat-GPT-Image-14-jul-2025-09-05-32-p-m.png" alt="Collar Paz Interior" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/Y0yLfyP9/Chat-GPT-Image-14-jul-2025-09-05-32-p-m.png" alt="Collar Paz Interior" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Collar Paz Interior</h3>
                             <p class="mt-2 text-sm text-gray-600">Collar tipo mala elaborado con howlita azul y borla decorativa, ideal para meditación y relajación.</p>
@@ -163,7 +163,7 @@
                     <!-- Producto 5: Pulsera Foco Dorado -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
-                        <img src="https://i.postimg.cc/2yXhmwp9/granate.png" alt="Pulsera Foco Dorado" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/2yXhmwp9/granate.png" alt="Pulsera Foco Dorado" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Foco Dorado</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera elegante y enérgica diseñada para quienes desean actuar con confianza y claridad.</p>
@@ -178,7 +178,7 @@
                     <!-- Producto 6: Pulsera Fuego Interior -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera Foco Dorado -->
-                        <img src="https://i.postimg.cc/fTTwms4N/Ojo-rojo-tigre.png" alt="Pulsera Fuego Interior" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/fTTwms4N/Ojo-rojo-tigre.png" alt="Pulsera Fuego Interior" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Fuego Interior</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera intensa que canaliza la energía del fuego interno y la fuerza de la tierra.</p>
@@ -193,7 +193,7 @@
                     <!-- Producto 7: Pulsera 7 Chakras – Armonía Femenina -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL de la Pulsera 7 Chakras – Armonía Femenina -->
-                        <img src="https://i.postimg.cc/65dd2dNS/7-Chakras-dama-gpt.png" alt="Pulsera 7 Chakras Armonía Femenina" class="w-full h-54 object-cover">
+                        <img src="https://i.postimg.cc/65dd2dNS/7-Chakras-dama-gpt.png" alt="Pulsera 7 Chakras Armonía Femenina" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera 7 Chakras Armonía Femenina</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera artesanal diseñada para alinear los siete centros energéticos del cuerpo.</p>
@@ -207,7 +207,7 @@
                     <!-- Producto 8: Pulsera Espíritu Sereno -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
                         <!-- Pega aquí la URL del Collar Paz Interior -->
-                        <img src="https://i.postimg.cc/RCYCz86Q/Amatista-hemati.png" alt="Pulsera Espíritu Sereno" class="w-full h-74 object-cover">
+                        <img src="https://i.postimg.cc/RCYCz86Q/Amatista-hemati.png" alt="Pulsera Espíritu Sereno" class="w-full h-64 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold font-display text-amber-800">Pulsera Espíritu Sereno</h3>
                             <p class="mt-2 text-sm text-gray-600">Pulsera elegante que canaliza la energía de la calma y la protección interior.</p>
